Implement first version of the backend
This just improves the subject of each event. The current implementation
has some room for improvement. Anyway, I am quite happy that it works
at all, so I will deploy it soon.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
+flake8==6.0.0
 Flask==2.3.2
+icalendar==5.0.7
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+six==1.16.0
+urllib3==2.0.3
 Werkzeug==2.3.6
