--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 flake8==6.0.0
 Flask==2.3.2
+gunicorn==20.1.0
 icalendar==5.0.7
 idna==3.4
 itsdangerous==2.1.2
