--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ Flask==2.3.3
 gunicorn==21.2.0
 icalendar==5.0.7
 idna==3.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
 packaging==23.1
+pluggy==1.2.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
+pytest==7.4.0
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
