--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,25 @@ name: CI
 on: [push]
 
 jobs:
+  test:
+    runs-on: Ubuntu-22.04
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python 3.11 
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+    
+    - name: Install dependencies
+      run: python -m pip install
+
+    - name: Test with pytest
+      run: python -m pytest
+
   deploy:
+    needs: test
     if: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     steps:
