--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: "3.11"
     
     - name: Install dependencies
-      run: python -m pip install requirements.txt 
+      run: python -m pip install -r requirements.txt 
 
     - name: Test with pytest
       run: python -m pytest
