--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pluggy==1.2.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
 pytest==7.4.0
+pytest-mock==3.11.1
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
