--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-blinker==1.6.2
+blinker==1.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
@@ -19,8 +19,8 @@ pyflakes==3.1.0
 pytest==7.4.2
 pytest-mock==3.11.1
 python-dateutil==2.8.2
-pytz==2023.3
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
-urllib3==2.0.6
+urllib3==2.0.7
 Werkzeug==3.0.0
