--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 blinker==1.7.0
-certifi==2023.11.17
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-flake8==6.1.0
-Flask==3.0.0
+flake8==7.0.0
+Flask==3.0.1
 gunicorn==21.2.0
 icalendar==5.0.11
-idna==3.4
+idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+Jinja2==3.1.3
+MarkupSafe==2.1.4
 mccabe==0.7.0
 packaging==23.2
-pluggy==1.3.0
+pluggy==1.4.0
 pycodestyle==2.11.1
-pyflakes==3.1.0
-pytest==7.4.3
+pyflakes==3.2.0
+pytest==8.0.0
 pytest-mock==3.12.0
 python-dateutil==2.8.2
-pytz==2023.3.post1
+pytz==2024.1
 requests==2.31.0
 six==1.16.0
-urllib3==2.1.0
+urllib3==2.2.0
 Werkzeug==3.0.1
