Add ruff as a formatter and linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,6 @@ testpaths = ["tests"]
 [tool.coverage.run]
 branch = true
 source = ["app"]
+
+[tool.ruff.lint]
+select = ["F", "UP", "B", "SIM", "I"]
