--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pytest-mock==3.12.0
 python-dateutil==2.8.2
 pytz==2024.1
 requests==2.31.0
+ruff==0.2.1
 six==1.16.0
 urllib3==2.2.0
 Werkzeug==3.0.1
