--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,25 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 flake8==7.0.0
-Flask==3.0.2
+Flask==3.0.3
 gunicorn==21.2.0
-icalendar==5.0.11
+icalendar==5.0.12
 idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mccabe==0.7.0
-packaging==23.2
+packaging==24.0
 pluggy==1.4.0
 pycodestyle==2.11.1
 pyflakes==3.2.0
-pytest==8.0.2
-pytest-mock==3.12.0
-python-dateutil==2.8.2
+pytest==8.1.1
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
-ruff==0.3.0
+ruff==0.3.5
 six==1.16.0
 urllib3==2.2.1
-Werkzeug==3.0.1
+Werkzeug==3.0.2
