--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-# A basic action that deploys to the server 
+# A basic action that deploys to the server
 
 name: CI
 
@@ -8,38 +8,38 @@ jobs:
   test:
     runs-on: Ubuntu-22.04
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.11 
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-    
-    - name: Install dependencies
-      run: python -m pip install -r requirements.txt 
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
 
-    - name: Test with pytest
-      run: python -m pytest
+      - name: Install dependencies
+        run: python -m pip install -r requirements.txt
+
+      - name: Test with pytest
+        run: python -m pytest
 
   deploy:
     needs: test
     if: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     steps:
-    - name: deploy on production server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        script_stop: true
-        script: |
-          cd better-tiss-calendar
-          git pull
-          npm install
-          npx tailwindcss --minify -i app/templates/template.css -o app/static/style.css
-          source .venv/bin/activate
-          python -m pip install -r requirements.txt
-          systemctl --user restart bettercal.service
+      - name: deploy on production server
+        uses: appleboy/ssh-action@1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script_stop: true
+          script: |
+            cd better-tiss-calendar
+            git pull
+            npm install
+            npx tailwindcss --minify -i app/templates/template.css -o app/static/style.css
+            source .venv/bin/activate
+            python -m pip install -r requirements.txt
+            systemctl --user restart bettercal.service
