--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,6 +40,5 @@ jobs:
             git pull
             npm install
             npx tailwindcss --minify -i app/templates/template.css -o app/static/style.css
-            source .venv/bin/activate
-            python -m pip install -r requirements.txt
+            uv sync
             systemctl --user restart bettercal.service
