--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,16 @@
+[project]
+name = "better-tiss-calendar"
+version = "0.0.1"
+dependencies = ["Flask", "gunicorn", "requests", "icalendar"]
+requires-python = ">=3.13"
+authors = [{ name = "flofriday" }]
+description = "A better TISS calendar"
+readme = "README.md"
+license = { file = "LICENSE.txt" }
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+pythonpath = ["."]
 
 [tool.coverage.run]
 branch = true
@@ -7,3 +18,6 @@ source = ["app"]
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
+
+[dependency-groups]
+dev = ["pytest-mock>=3.14.0", "pytest>=8.3.4"]
