--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,22 +5,23 @@ name: CI
 on: [push]
 
 jobs:
-  # test:
-  #   runs-on: Ubuntu-22.04
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  test:
+    runs-on: Ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Python 3.13
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.13"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
-  #     - name: Install dependencies
-  #       run: python -m pip install -r requirements.txt
+      - name: Set up Python
+        run: uv python install
 
-  #     - name: Test with pytest
-  #       run: python -m pytest
+      - name: Install dependencies
+        run: uv sync
+
+      - name: Test with pytest
+        run: uv run pytest
 
   deploy:
     needs: test
