--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,5 +41,7 @@ jobs:
             git pull
             npm install
             npx tailwindcss --minify -i app/templates/template.css -o app/static/style.css
+            echo "Running uv as $USER"
+            which uv
             uv sync
             systemctl --user restart bettercal.service
