Use absolut paths for uv
I don't understand why it won't work any other way but I will look into it later.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,6 +41,5 @@ jobs:
             git pull
             npm install
             npx tailwindcss --minify -i app/templates/template.css -o app/static/style.css
-            echo "Running uv as $USER on $SHELL" > ci.txt
-            /usr/bin/bash -c 'uv sync'
+            /home/bettercal/.local/bin/uv run
             systemctl --user restart bettercal.service
