--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^4.0.5"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.5"
   }
 }
