--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,10 @@ source = ["app"]
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
 
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+exclude = ["venv", ".venv", "**/resources"]
+
 [dependency-groups]
-dev = ["pytest-mock>=3.14.0", "pytest>=8.3.4"]
+dev = ["pytest-mock>=3.14.0", "pytest>=8.3.4", "pyright>=1.1.394"]
