Add linting and formatting to CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Install dependencies
         run: uv sync
 
+      - name: Linting
+        run: uv tool run ruff check
+
+      - name: Formatting
+        run: uv tool run ruff format --check
+
       - name: Typecheck
         run: uv tool run pyright
 
