--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,9 @@ venv = ".venv"
 exclude = ["venv", ".venv", "**/resources"]
 
 [dependency-groups]
-dev = ["pytest-mock>=3.14.0", "pytest>=8.3.4", "pyright>=1.1.394"]
+dev = [
+    "pytest-mock>=3.14.0",
+    "pytest>=8.3.4",
+    "pyright>=1.1.394",
+    "ruff>=0.9.9",
+]
