--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,12 @@
 [project]
 name = "better-tiss-calendar"
 version = "0.0.1"
-dependencies = ["Flask", "gunicorn", "requests", "icalendar"]
+dependencies = [
+    "flask>=3.1.0",
+    "gunicorn>=23.0.0",
+    "icalendar>=6.1.1",
+    "requests>=2.32.3",
+]
 requires-python = ">=3.13"
 authors = [{ name = "flofriday" }]
 description = "A better TISS calendar"
@@ -27,7 +32,7 @@ exclude = ["venv", ".venv", "**/resources"]
 [dependency-groups]
 dev = [
     "pytest-mock>=3.14.0",
-    "pytest>=8.3.4",
+    "pytest>=8.3.5",
     "pyright>=1.1.394",
     "ruff>=0.9.9",
 ]
