Update dependencies and switch to ty in CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,8 @@ jobs:
         run: uv run ruff format --check
 
       - name: Typecheck
-        run: uv run pyright
+        #run: uv run pyright
+        run: uv ty check
 
       - name: Test with pytest
         run: uv run pytest
