--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,8 +27,7 @@ jobs:
         run: uv run ruff format --check
 
       - name: Typecheck
-        #run: uv run pyright
-        run: uv ty check
+        run: uv run ty check
 
       - name: Test with pytest
         run: uv run pytest
